# esp32-sensor-fw

./: .clangd  .cproject  .gitignore  .project  CMakeLists.txt  README.md
components/bme280/: CMakeLists.txt  bme.h
components/drivers/bme280/: CMakeLists.txt  bme.c
components/drivers/i2c/: CMakeLists.txt
components/i2c/: CMakeLists.txt  i2c.c  i2c.h
components/include/: typedef.h
components/tasks/: CMakeLists.txt  bme280_task.c  tasks.h
main/: CMakeLists.txt  main.c
